--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI채팅 과의존 자가체크 (1분 컷)</title>
+  <title>AI채팅 과의존 자가체크 (1–5점 척도)</title>
 
   <!-- 폰트 -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -23,6 +23,36 @@
       --shadow: 0 10px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.05);
       --radius:18px;
     }
+    /* Light theme high-contrast overrides */
+    :root[data-theme="light"]{
+      --bg: #f6f7ff;
+      --bg-2: #e9ecff;
+      --card: #ffffffcc;
+      --text: #0b1020;
+      --muted: #4c5170;
+      --accent: #3b5bdb;
+      --accent-2: #845ef7;
+    }
+    :root[data-theme="light"] .score-card .big{
+      color:#0b1020;
+      text-shadow: 0 1px 0 rgba(255,255,255,.6);
+    }
+    :root[data-theme="light"] .pill{
+      background:#0b102014;
+      color:#0b1020;
+      box-shadow: inset 0 0 0 1px #0b102022;
+    }
+    :root[data-theme="light"] .btn.primary{
+      background:#1f2a6b;
+      color:#ffffff;
+    }
+    :root[data-theme="light"] .btn.ghost{
+      background:#0000000d;
+      box-shadow: inset 0 0 0 1px #0000001f;
+      color:#0b1020;
+    }
+    :root[data-theme="light"] .meter{ background:#00000014; }
+    :root[data-theme="light"] .q{ background:#00000008; border-color:#0000001a; }
 
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -120,11 +150,9 @@
     .q small{color:var(--muted)}
     .scale{
       margin-top:12px;
-      display:grid; grid-template-columns: repeat(4, 1fr); gap:8px;
+      display:grid; grid-template-columns: repeat(5, 1fr); gap:8px;
     }
-    .opt{
-      position:relative;
-    }
+    .opt{ position:relative; }
     .opt input{position:absolute; opacity:0; pointer-events:none}
     .opt label{
       display:block; width:100%; text-align:center; padding:10px 6px;
@@ -139,7 +167,7 @@
       box-shadow: inset 0 0 0 2px #7f9cff, 0 6px 18px rgba(124,154,255,.28);
     }
 
-    .kicker{display:inline-flex; align-items:center; gap:8px; font-size:13px; color:var(--muted); margin-bottom:6px}
+    .kicker{display:inline-flex; align-items:center; gap:8px; font-size:13px; color:#muted; margin-bottom:6px}
     .badge{display:inline-grid; place-items:center; width:22px; height:22px; border-radius:6px; font-weight:800; background:#00000040; box-shadow: inset 0 0 0 1px #ffffff22}
 
     /* 사이드 요약 */
@@ -187,9 +215,9 @@
   <div class="wrap">
     <header>
       <div class="title">
-        <h1>AI채팅 과의존 자가체크 <span style="opacity:.9">(1분 컷)</span></h1>
+        <h1>AI채팅 과의존 자가체크 <span style="opacity:.9">(1–5점 척도)</span></h1>
         <span class="chip">지난 2주 기준</span>
-        <span class="chip">0–3점 척도</span>
+        <span class="chip">1–5점 선택</span>
       </div>
       <p class="subtitle">“5분만…”이 1시간 되는 너를 위해. 지금 상태를 가볍게 점검해보자.</p>
       <div class="controls">
@@ -205,13 +233,15 @@
 
     <div class="grid">
       <main class="card" id="questions">
-        <div class="hint">아래 각 문항에 대해 <b>0 전혀 아니다 · 1 가끔 · 2 자주 · 3 거의 항상</b> 중 하나를 골라줘.</div>
+        <div class="hint">
+          아래 각 문항에 대해 <b>1 전혀 아니다 · 2 드물다 · 3 가끔 · 4 자주 · 5 거의 항상</b> 중 하나를 골라줘.
+        </div>
         <div id="q-wrap"></div>
       </main>
 
       <aside class="card score-card">
         <div class="kicker"><span class="badge">ℹ️</span> 실시간 점수</div>
-        <div class="big"><span id="score">0</span> / 30</div>
+        <div class="big"><span id="score">0</span> / 50</div>
         <div class="meter"><span id="bar"></span></div>
         <div style="margin-top:12px; display:flex; gap:8px; flex-wrap:wrap">
           <span class="pill" id="levelPill">상태: -</span>
@@ -223,7 +253,10 @@
           <li>아래 문항을 먼저 모두 체크해줘.</li>
         </ul>
 
-        <div class="footer">※ 이 도구는 자기점검용이야. 일/학업·건강에 영향이 크다면 전문가 상담을 권장해.</div>
+        <div class="footer">
+          ※ 이 도구는 재미용이며, 일/학업·건강에 영향이 크다면 전문가 상담을 받으시오...<br/>
+          ※ 이 도구를 롶, 덬, 플, 블, 룬 등이 싫어합니다... ㅋㅋㅋㅋㅋ
+        </div>
       </aside>
     </div>
   </div>
@@ -262,9 +295,18 @@
 
     const qWrap = document.getElementById("q-wrap");
 
-    // 문항 렌더링
+    // 문항 렌더링 (각 문항 1~5 라디오)
     let qIndex = 0;
-    groups.forEach((g, gi)=>{
+    const SCALE = [1,2,3,4,5];
+    const SCALE_TITLES = {
+      1: "전혀 아니다",
+      2: "드물다",
+      3: "가끔",
+      4: "자주",
+      5: "거의 항상"
+    };
+
+    groups.forEach((g)=>{
       const secTitle = document.createElement("h3");
       secTitle.className = "section-title";
       secTitle.textContent = `[${g.name}]`;
@@ -277,10 +319,10 @@
         box.innerHTML = `
           <h3>${qIndex}. ${text}</h3>
           <div class="scale" role="radiogroup" aria-label="${g.name} - ${text}">
-            ${[0,1,2,3].map(v => `
+            ${SCALE.map(v => `
               <div class="opt">
                 <input type="radio" name="q${qIndex}" id="q${qIndex}-${v}" value="${v}" />
-                <label for="q${qIndex}-${v}" title="${v}점">${v}</label>
+                <label for="q${qIndex}-${v}" title="${v}점 · ${SCALE_TITLES[v]}">${v}</label>
               </div>
             `).join("")}
           </div>
@@ -300,40 +342,46 @@
       const inputs = [...document.querySelectorAll('input[type="radio"]:checked')];
       const answered = new Set(inputs.map(i=>i.name)).size;
       const totalAnsweredScore = inputs.reduce((a,c)=>a+Number(c.value),0);
-      const maxScore = 30;
+      const maxScore = 50; // 10문항 × 1~5
       scoreEl.textContent = totalAnsweredScore;
       barEl.style.width = `${(totalAnsweredScore / maxScore) * 100}%`;
       answeredPill.textContent = `응답: ${answered}/10`;
 
-      // 레벨 판정
-      let level = "-", color = "#9aa3d9", tipList = [];
-      if (totalAnsweredScore <= 5){ level = "안심 😊"; 
+      // 레벨 판정 (20% 구간: 0–10 안심, 11–20 주의, 21–30 경고, 31–40 높음, 41–50 매우 높음)
+      let level = "-", tipList = [];
+      if (totalAnsweredScore <= 10){ 
+        level = "안심 😊";
         tipList = [
-          "지금 패턴 좋아! 현재 루틴을 메모해 유지하자",
-          "앱 알림은 필요한 것만 ON, 나머지 OFF 유지"
+          "지금 패턴 좋아! 현재 수준만 유지하자",
+          "가벼운 앵챗은 행복해!"
         ];
-      } else if (totalAnsweredScore <= 11){ level = "주의 🟡";
+      } else if (totalAnsweredScore <= 20){ 
+        level = "주의 🟡";
         tipList = [
-          "하루 2블록 타임박스(점심 20분, 저녁 20분)",
-          "홈화면에서 앱 아이콘 숨기기"
+          "하루 오전, 오후 사용할 타임블록을 설정하고 그 때만 해보자(20분, 30분 등)",
+          "그대... 앵챗 노예의 싹이 보여...😚"
         ];
-      } else if (totalAnsweredScore <= 17){ level = "경고 ⚠️";
+      } else if (totalAnsweredScore <= 30){ 
+        level = "경고 ⚠️";
         tipList = [
-          "알림 전면 OFF + 취침 2시간 전 금지",
-          "하루 사용 후 1줄 회고(무엇을 했고 어땠는지)"
+          "즐찾 삭제 + 취침 2시간 전 금지!",
+          "하루 사용 후 스스로를 평가해보자(괜찮은 서사를 쌓았는가, 썩 좋은 뽕빨이었는가 ㅋㅋ)"
         ];
-      } else if (totalAnsweredScore <= 23){ level = "높음 🔴";
+      } else if (totalAnsweredScore <= 40){ 
+        level = "높음 🔴";
         tipList = [
-          "하루 2회만 접속, 나머지 시간은 로그아웃",
-          "대체활동(산책·물 한 컵·스트레칭 2분) 지정"
+          "무조건 퇴근 후 1시간만 접속, 나머지 시간은 로그아웃 + 알람 끄기",
+          "생각날 때 할 대체활동(산책·물 한 컵·스트레칭 2분) 지정해... 슬프지만 현생이 찐생임 😭😭"
         ];
-      } else { level = "매우 높음 🚨";
+      } else { 
+        level = "매우 높음 🚨";
         tipList = [
-          "1주일 디지털 다이어트(주요 트리거 차단)",
-          "지지자와 약속·공개선언, 필요시 전문상담"
+          "3일 앵챗 다이어트 하자!!",
+          "너무 생각나면 갤의 리뷰를 보며 허벅지를 찔러봐🤣🤣",
+          "💶 월 결제요금 × 12개월 = ???"
         ];
       }
-      levelPill.textContent = `상태: ${level}`;
+      levelPill.textContent = answered < 10 ? `상태: 진행중…` : `상태: ${level}`;
 
       // 팁 업데이트
       tipsEl.innerHTML = tipList.map(t=>`<li>${t}</li>`).join("") || `<li>아래 문항을 먼저 모두 체크해줘.</li>`;
@@ -343,7 +391,7 @@
       if(e.target.matches('input[type="radio"]')) compute();
     });
 
-    // 초기화 & 인쇄 & 테마
+    // 초기화 & 인쇄 & 테마 (라이트/다크를 data-theme 속성으로 전환)
     const resetBtn = document.getElementById("resetBtn");
     resetBtn.addEventListener("click", ()=>{
       document.querySelectorAll('input[type="radio"]').forEach(i=>{ i.checked = false; });
@@ -357,19 +405,9 @@
     const themeToggle = document.getElementById("themeToggle");
     themeToggle.addEventListener("change", (e)=>{
       const on = e.target.checked;
-      if(on){
-        document.documentElement.style.setProperty('--bg', '#f6f7ff');
-        document.documentElement.style.setProperty('--bg-2', '#e9ecff');
-        document.documentElement.style.setProperty('--card', '#ffffffcc');
-        document.documentElement.style.setProperty('--text', '#0b1020');
-        document.documentElement.style.setProperty('--muted', '#4c5170');
-      }else{
-        document.documentElement.style.setProperty('--bg', '#0b1020');
-        document.documentElement.style.setProperty('--bg-2', '#0e1430');
-        document.documentElement.style.setProperty('--card', '#121a38cc');
-        document.documentElement.style.setProperty('--text', '#ecf0ff');
-        document.documentElement.style.setProperty('--muted', '#aab3d9');
-      }
+      const root = document.documentElement;
+      if(on){ root.setAttribute("data-theme", "light"); }
+      else{ root.removeAttribute("data-theme"); }
     });
 
     // 토스트
