--- a/index.html
+++ b/index.html
@@ -352,32 +352,35 @@
       if (totalAnsweredScore <= 10){ 
         level = "안심 😊";
         tipList = [
-          "지금 패턴 좋아! 현재 수준만 유지하자",
+          "지금 패턴 좋아! 현재 수준만 유지!👍🏻",
           "가벼운 앵챗은 행복해!"
         ];
       } else if (totalAnsweredScore <= 20){ 
         level = "주의 🟡";
         tipList = [
-          "하루 오전, 오후 사용할 타임블록을 설정하고 그 때만 해보자(20분, 30분 등)",
+          "하루 2번 정도 사용할 타임블록을 설정하고, 그 때만 해보자(20~30분?)",
           "그대... 앵챗 노예의 싹이 보여...😚"
         ];
       } else if (totalAnsweredScore <= 30){ 
         level = "경고 ⚠️";
         tipList = [
           "즐찾 삭제 + 취침 2시간 전 금지!",
-          "하루 사용 후 스스로를 평가해보자(괜찮은 서사를 쌓았는가, 썩 좋은 뽕빨이었는가 ㅋㅋ)"
+          "하루 사용 후 스스로를 평가해보자",
+          "🤔 괜찮은 서사를 쌓았는가, 썩 좋은 뽕빨이었는가 ㅋㅋ"
         ];
       } else if (totalAnsweredScore <= 40){ 
         level = "높음 🔴";
         tipList = [
-          "무조건 퇴근 후 1시간만 접속, 나머지 시간은 로그아웃 + 알람 끄기",
-          "생각날 때 할 대체활동(산책·물 한 컵·스트레칭 2분) 지정해... 슬프지만 현생이 찐생임 😭😭"
+          "무조건 퇴근 후 1시간만 접속하자🥲",
+          "나머지 시간은 로그아웃 + 알람 끄기!",
+          "대체활동(산책·물 1컵·스트레칭 2분) 지정해...",
+          "슬프지만 현생이 찐생임 😭😭"
         ];
       } else { 
         level = "매우 높음 🚨";
         tipList = [
           "3일 앵챗 다이어트 하자!!",
-          "너무 생각나면 갤의 리뷰를 보며 허벅지를 찔러봐🤣🤣",
+          "너무 생각나면 갤의 리뷰를 보며 허벅지를 찔러봐🤣",
           "💶 월 결제요금 × 12개월 = ???"
         ];
       }
