--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         items: [
           "다른 일을 해도 AI채팅 생각이 자꾸 났다",
           "쉬는 시간·잠들기 전 자동으로 앱부터 열었다",
-          "답변이 늦으면 마음이 쿵쾅·집중이 흔들렸다"
+          "출력이 늦으면 마음이 쿵쾅·집중이 흔들렸다"
         ]
       },
       {
